# usd-optimize

./: .clang-format  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  PLUGINS.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  premake5.lua  print_env.sh  repo.toml
.agents/docs/: personas.md  screenshot-generation.md  tuning-session-summary.md
.agents/docs/sessions/: shrinkwrap.md
.agents/operations/: INDEX.md  INVOCATION.md  PIPELINES.md  _template.md  boxClip.md  computeExtents.md  countVertices.md  decimateMeshes.md  deduplicateGeometry.md  deduplicateHierarchies.md  deleteHiddenPrims.md  deletePrims.md  diceMeshes.md  editStageMetrics.md  findCoincidingGeometry.md  findFlatHierarchies.md  findOccludedMeshes.md  findOverlappingMeshes.md  fitPrimitives.md  flattenHierarchy.md  generateAtlasUVs.md  generateNormals.md  generateProjectionUVs.md  generateScene.md  manifoldMeshes.md  merge.md  mergeVertices.md  meshCleanup.md  optimizeMaterials.md  optimizePrimvars.md  optimizeSkelRoots.md  optimizeTimeSamples.md  organizePrototypes.md  pivot.md  primitivesToMeshes.md  printStats.md  pruneLeaves.md  pythonScript.md  remeshMeshes.md  removeAttributes.md  (+11 more)
.agents/scripts/rendering/: ovrtx_depth_aovs.py  ovrtx_shaded.py  ovrtx_two_pass_wireframe.py  pxr_edge_composite.py  storm_wireframe.py
.agents/skills/: README.md
.agents/skills/compare-stages/: SKILL.md
.agents/skills/create-proxy/: SKILL.md
.agents/skills/debug-operation/: SKILL.md
.agents/skills/deduplicate-hierarchies/: SKILL.md
.agents/skills/inspect-asset/: SKILL.md
.agents/skills/interpret-validators/: SKILL.md
.agents/skills/new-operation/: SKILL.md
.agents/skills/prebuilt-package/: SKILL.md
.agents/skills/run-operations/: SKILL.md
.agents/skills/run-validators/: SKILL.md
.agents/skills/testing/: SKILL.md
.agents/skills/tune-parameters/: SKILL.md
.agents/skills/validators/: SKILL.md
docs/: developer.rst  install-prebuilt-linux.md  install-prebuilt-windows.md  python.rst
docs/manual/: overview.rst
source/core/: premake5.lua
source/core/bindings/: BindingsPython.cpp
source/core/config/: operation_mapping.json
source/core/src/: Argument.cpp  Argument.h  Coalescer.cpp  Coalescer.h  ComputeExtents.cpp  ComputeExtents.h  Core.cpp  Core.h  CudaUtils.cpp  CudaUtils.h  Defs.h  JsonUtils.h  Log.h  MeshToolsCommon.cpp  MeshToolsCommon.h  OmniOperation.cpp  OmniOperation.h  Operation.cpp  Operation.h  ParseJson.cpp  ParseJson.h  PybindUtils.h  PythonOperation.cpp  PythonOperation.h  PythonUtils.cpp  PythonUtils.h  RemovePrims.cpp  RemovePrims.h  Report.cpp  Report.h  ResolveSdfPaths.cpp  ResolveSdfPaths.h  SceneOptimizer.h  SceneOptimizerInterface.cpp  SceneOptimizerInterface.h  Stats.cpp  Stats.h  TbbCompat.h  TransformUtils.cpp  TransformUtils.h  (+7 more)
source/operations/: premake5.lua
source/operations/boxClip/: BoxClip.cpp  BoxClip.h  premake5.lua
source/operations/computeExtents/: ComputeExtentsPlugin.cpp  ComputeExtentsPlugin.h  premake5.lua
source/operations/countVertices/: CountVertices.cpp  CountVertices.h  premake5.lua
source/operations/decimateMeshes/: OmniMeshDecimate.cpp  OmniMeshDecimate.h  premake5.lua
source/operations/deduplicateGeometry/: DeduplicateGeometry.cpp  DeduplicateGeometry.h  premake5.lua
source/operations/deduplicateHierarchies/: DeduplicateHierarchies.cpp  DeduplicateHierarchies.h  premake5.lua
source/operations/deleteHiddenPrims/: __init__.py
source/operations/deletePrims/: DeletePrimsPlugin.cpp  DeletePrimsPlugin.h  premake5.lua
source/operations/diceMeshes/: DiceMeshes.cpp  DiceMeshes.h  premake5.lua
source/operations/editStageMetrics/: EditStageMetrics.cpp  EditStageMetrics.h  premake5.lua
source/operations/findCoincidingGeometry/: FindCoincidingGeometry.cpp  FindCoincidingGeometry.h  premake5.lua
source/operations/findFlatHierarchies/: FindFlatHierarchiesOperation.cpp  FindFlatHierarchiesOperation.h  premake5.lua
source/operations/findOccludedMeshes/: FindOccludedMeshes.cpp  FindOccludedMeshes.h  premake5.lua
source/operations/findOverlappingMeshes/: FindOverlappingMeshes.cpp  FindOverlappingMeshes.h  FindOverlappingMeshesOperation.cpp  FindOverlappingMeshesOperation.h  premake5.lua
source/operations/fitPrimitives/: Primitive.cpp  Primitive.h  premake5.lua
source/tests/: premake5.lua
source/validators/: premake5.lua
tests/: test_skill_docs.py
tools/packman/: packman
tools/perf_operations/: pipelines.json  resolve_output.py  run.bat  run.sh  run_operations.py
tools/perf_validators/: perf_validators.py  resolve_artifacts.py  run.bat  run.sh  summarize_csv.py
tools/premake/: scene-optimizer-options.lua  scene-optimizer-public.lua
tools/pyproject/: auditwheel.sh  dev-requirements.txt  pybuild.bat  pybuild.sh  pyproject.toml
tools/repoman/: py_package.py  repo_tools.toml  repoman.py  usd.py
(+546 files in other folders)
